syntax = "proto3";

package grpc.testing;

option objc_class_prefix = "RMT";

message Empty {}

enum PayloadType {
    COMPRESSABLE = 0;
    
    UNCOMPRESSABLE = 1;
    
    RANDOM = 2;
}

message Payload {
    PayloadType type = 1;
    bytes body = 2;
}

message SimpleRequest {
    PayloadType response_type = 1;
    
    int32 response_size = 2;
    
    Payload payload = 3;
    
    bool fill_username = 4;
    
    bool fill_oauth_scope = 5;
}

message SimpleResponse {
    Payload payload = 1;
    
    string username = 2;
    
    string oauth_scope = 3;
}

message ResponseParameters {
    int32 size = 1;
    
    //Desired interval between consecutive responses in the response stream in microseconds.
    int32 interval_us = 2;
}

message StreamingOutputCallRequest {
    PayloadType response_type = 1;
    
    repeated ResponseParameters response_parameters = 2;
    
    Payload payload = 3;
}

message StreamingOutputCallResponse  {
    Payload payload = 1;
}

service TestService {
    rpc EmptyCall(Empty) returns (Empty);
    
    rpc UnaryCall(SimpleRequest) returns (SimpleResponse);
}
